# muti-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_ASSISTANT_OPTIMIZATION_SUMMARY.md  ARCHITECTURE_PERFORMANCE_ANALYSIS.md  AUTOMATION_REPORT.md  CHANGELOG.md  CHAT_PERSISTENCE_IMPLEMENTATION.md  CHAT_PERSISTENCE_VALIDATION_REPORT.md  CI_FIX_FINAL_REPORT.md  CI_FIX_PLAN.md  CI_REPAIR_REPORT.md  CLAUDE.md  CODE_FIXES_REPORT.md  CODE_REVIEW_2026-03-06.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIMIZATION.md  Dockerfile  FINAL_CI_REPORT.md  FINAL_DEEP_OPTIMIZATION_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REPORT.md  FINAL_STATUS.md  FURTHER_OPTIMIZATION_OPPORTUNITIES.md  GITHUB_PUSH_GUIDE.md  HIGH_PRIORITY_OPTIMIZATIONS_COMPLETE.md  HTTP_CLIENT_FIX_SUMMARY.md  HTTP_CLIENT_FIX_VALIDATION.md  HTTP_CLIENT_USAGE_GUIDE.md  INSTALL_DOCKER_MANUAL.md  INSTALL_PROGRESS.md  LICENSE  MEDIUM_PRIORITY_OPTIMIZATIONS_COMPLETE.md  Makefile  OPENCLAW_AUTOSTART_VERIFIED.md  OPTIMIZATION_100_PERCENT_COMPLETE.md  OPTIMIZATION_ANALYSIS.md  (+74 more)
.github/workflows/: ci.yml  cicd.yml
alembic/: env.py
alembic/versions/: 001_add_chat_messages_table.py
config/: code-review.yaml  llm.json  mcp.yaml  planning.yaml  pptx.yaml  ralph.yaml  simplifier.yaml  skill-creator.yaml  superpowers.yaml  ui-ux.yaml  webapp-testing.yaml
docs/: CODE_OPTIMIZATION_SUMMARY.md  CODE_QUALITY_REPORT.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  DOCKER_INSTALL.md  DOCUMENTATION-RESTRUCTURE-PLAN.md  FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_REPORT_LLM_API.md  OPTIMIZATION_SUGGESTIONS.md  PHASE1_DETAILED_PLAN.md  QUICKSTART-UNIFIED.md  REDIS_SETUP.md  ROADMAP.md  SKILLS_503_ERROR_FIX.md  WEBUI_GUIDE.md  WINDOWS_INSTALL_GUIDE.md  ai-chat-technical.md  local_llm_optimization_report.md  memory_optimization_report.md  pi-python-code-review.md  pi-python-completion-report.md  pi-python-design.md  pi-python-final-report.md  pi-python-optimization-tasks.md  pi-python-quality-report.md  pi-python-skills-guide.md  process-tool-usage.md  role_mapping_architecture.md  role_mapping_guide.md  skills_optimization_report.md  tools-design.md  tools-interface-spec.md  tools-output-schema.md  tools-web-config-and-schema-version.md  公网访问排查指南.md
docs/archive-for-review/: README.md
docs/getting-started/: ports-config.md
docs/migration/: workflow-unification.md
examples/: 01_basic_task.py  README.md  agent_with_skills.py  test_coder_agent.py  test_tester_agent.py
memory/: iteration_plan.md  multi_agent_plan.md  progress.md
monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
pi_python/: __init__.py  adapter.py
pi_python/agent/: __init__.py  agent.py  events.py  session.py  tools.py
pi_python/ai/: __init__.py  model.py  stream.py  types.py
pi_python/devtools/: __init__.py
pi_python/examples/: agent_skills_example.py  devtools_demo.py  slack_integration_demo.py
pi_python/extensions/: __init__.py  api.py  loader.py
pi_python/integrations/: __init__.py  base.py  registry.py  router.py
pi_python/skills/: __init__.py  loader.py  registry.py
plan/: tools-development-plan.md
scripts/: __init__.py  backup.py  check_network.sh  check_quality.py  cleanup_docs.py  health_check.py  install-docker.ps1  install-ubuntu-automated.ps1  install_requirements.py  migrate.py  profile.py  run_tests.py  test_all.py  test_llm.py  test_report.md  test_simple.py  test_workflow.py
src/: __init__.py  app.py  main.py  main_prod.py  monitoring.py
src/agents/: __init__.py  architect.py  base.py  coder.py  doc_writer.py  llm_helper.py  planner.py  react_architect.py  react_coder.py  react_tester.py  research.py  senior_architect.py  tester.py
src/api/: __init__.py  batch.py  batch_endpoints.py  cache.py  docs.py  docs_enhanced.py  frontend_optimization.py  graphql.py  main.py  middleware.py  optimizer.py  performance.py  rate_limiter.py  response.py  response_cache.py  routes.py  security.py  streaming.py  validators.py  validators_new.py  versioning.py
src/auth/: __init__.py  auth.py
src/autoscaling/: scaler.py
src/backup/: manager.py
src/cache/: redis_cache.py  smart_cache.py
src/config/: __init__.py  celery_config.py  (+2 more)
tests/: benchmark.py  conftest.py  locust.conf  locustfile.py  test_agents.py  test_ai_assistant.md  test_api.py  test_auth.py  test_cache.py  test_chat.py  test_config.py  test_container_role_mapping.py  test_db.py  test_exceptions.py  test_graph.py  test_guardrails.py  test_integration.py  test_knowledge.py  test_llm_api.py  test_local_llm.py  test_memory.py  test_memory_api.py  test_models.py  test_pi.py  test_pi_adapter.py  test_pi_agent.py  test_pi_ai_model.py  test_pi_ai_providers.py  test_pi_ai_stream.py  test_pi_ai_types.py  test_pi_base_provider.py  test_pi_extensions.py  test_pi_providers.py  test_pi_session.py  test_pi_skills.py  test_pi_tools.py  test_policy.py  test_skills.py  test_skills_backend.py  test_tools.py  (+1 more)
webui/: CHANGELOG.md  CHAT_PERSISTENCE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS.md  README_ENHANCED.md  RELEASE_V5.md  SKILLS_FIX_SUMMARY.md  SKILLS_MANAGEMENT_IMPLEMENTATION.md  TASK_4.1_COMPLETE.md  TASK_4.2_COMPLETE.md  TASK_4.3_COMPLETE.md  TASK_4.4_COMPLETE.md  TASK_4.5-4.12_COMPLETE.md  TEST_REPORT_V5.md  agent-monitor.html  agents.html  ai-assistant-standalone.html  ai-assistant.html  analytics.html  app.py  app_chat_api.py  app_complete.py  app_db.py  app_optimized.py  app_realtime.py  dashboard.html  event_bus.py  index.html  index.html.bak  index_enhanced.html  index_v2.html  index_v3.html  index_v5.html  index_v5.html.bak2  llm_config_component.html  log-viewer.html  manifest.json  offline.html  redis_cache.py  (+15 more)
(+183 files in other folders)
